# quantize-rs

./: .gitignore  ACTIVATION_CALIBRATION_INTEGRATION.md  CALIBRATION_RESULTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PYTHON_BUILD_INSTRUCTIONS.md  README.md  README_PYTHON.md  build.rs  examples.py  pyproject.toml  test.py  test_python_bindings.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: quantization.rs
eval/: benchmark_gpt2.py  requirements.txt  validate_models.py
examples/: README.md  activation_calibration.rs  basic_quantization.rs  batch_quantize.rs  config.toml  config.yaml  validate_real_model.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: onnx_load.rs
proto/: onnx.proto3
scripts/: download_test_models.sh
src/: config.rs  errors.rs  lib.rs  main.rs  onnx_proto.rs  python.rs
src/calibration/: inference.rs  methods.rs  mod.rs  stats.rs
src/cli/: commands.rs  mod.rs
src/onnx_utils/: graph_builder.rs  mod.rs  quantization_nodes.rs
src/quantization/: mod.rs
tests/: integration.rs  property_tests.proptest-regressions  property_tests.rs
