[package]
name = "quantize-rs"
version = "0.1.0"
edition = "2021"
authors = ["Abdul Rahman Kamal <abdulrahmandev141@gmail.com>"]
description = "Simple neural network quantization toolkit, up to 4x smaller models with minimal accuracy loss"
license = "MIT"
repository = "https://github.com/AR-Kamal/quantize-rs"
homepage = "https://github.com/AR-Kamal/quantize-rs"
documentation = "https://docs.rs/quantize-rs"
readme = "README.md"
keywords = ["quantization", "neural-network", "onnx", "ml", "optimization"]
categories = ["command-line-utilities", "science", "compression"]
exclude = ["*.onnx", "examples/*.onnx"]

[dependencies]
tract-onnx = "0.21"
tract-core = "0.21"

# ONNX model parsing
onnx = "0.1.0"
prost = "0.12"
protobuf = "1.7" 

# Tensor operations
ndarray = "0.15"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress bars and formatting
indicatif = "0.17"
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "quantize-rs"
path = "src/main.rs"

[lib]
name = "quantize_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[example]]
name = "basic_quantization"
path = "examples/basic_quantization.rs"

[[example]]
name = "batch_quantize"
path = "examples/batch_quantize.rs"