[package]
name = "quantize-rs"
version = "0.3.0"
edition = "2021"
authors = ["Abdul Rahman Kamal <abdulrahmandev141@gmail.com>"]
description = "Neural network quantization toolkit for ONNX models"
license = "MIT"
repository = "https://github.com/AR-Kamal/quantize-rs"
homepage = "https://github.com/AR-Kamal/quantize-rs"
documentation = "https://docs.rs/quantize-rs"
readme = "README.md"
keywords = ["quantization", "neural-network", "onnx", "ml", "optimization"]
categories = ["command-line-utilities", "science", "compression"]
exclude = ["*.onnx", "examples/*.onnx"]

[dependencies]
tract-onnx = "0.21"
tract-core = "0.21"
glob = "0.3"
rand = "0.8"

# ONNX model parsing
onnx = "0.1.0"
prost = "0.12"
protobuf = "1.7" 

# Tensor operations
ndarray = "0.15"
ndarray-npy = "0.8"
image = "0.25"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

indicatif = "0.17"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
serde_yaml = "0.9"
toml = "0.8"

[features]
python = ["pyo3"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

# Maturin looks for this section when building Python wheels
[package.metadata.maturin]
python-source = "python"
module-name = "quantize_rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "quantize-rs"
path = "src/main.rs"

[lib]
name = "quantize_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[example]]
name = "basic_quantization"
path = "examples/basic_quantization.rs"

[[example]]
name = "batch_quantize"
path = "examples/batch_quantize.rs"

[[example]]
name = "activation_calibration"
path = "examples/activation_calibration.rs"